# TRPG-master

./: .env.example  .gitignore  AI_AGENT_EVOLUTION.md  MVP架构设计思考.md  README.md  agent-architecture-design.md  agent设计文档.md  pyproject.toml  产品 proposal-ai 桌游主持人  产品调研.docx  战略决策-产品方向与范围.md
agent-collaboration-framework/: .env.example  .gitignore  README.md  pyproject.toml
agent-collaboration-framework/collaboration_framework/: __init__.py  cli.py  contracts.py  ports.py  routing.py  schema_export.py  settings.py  workflow.py
agent-collaboration-framework/collaboration_framework/agents/: __init__.py  runtime_host.py
agent-collaboration-framework/collaboration_framework/bootstrap/: __init__.py  container.py  host_agent.py
agent-collaboration-framework/collaboration_framework/contracts/: __init__.py  action.py  common.py  module.py  player_view.py  runtime.py
agent-collaboration-framework/collaboration_framework/engine/: __init__.py  atomic.py  kernel.py  models.py  service.py
agent-collaboration-framework/collaboration_framework/host/: __init__.py
agent-collaboration-framework/collaboration_framework/module/: __init__.py  import_workflow.py  models.py  publish.py  validation.py
agent-collaboration-framework/collaboration_framework/modules/: __init__.py  validation.py
agent-collaboration-framework/collaboration_framework/ports/: __init__.py  action_executor.py  player_view_source.py
agent-collaboration-framework/docs/: CoC模组能力统计与ModuleContent-v1归纳.md  agent-implementation-team-plan.md  agent编排技术选型.md  architecture.md  glossary.md  成员A-主持编排Agent流程架构.md  成员B-确定性规则引擎流程架构.md  成员C-模组解析与审查Agent流程架构.md  数据模型设计.md
agent-collaboration-framework/docs/architecture/: adr-module-parser-architecture.md  data-model-alignment-rfc.md
agent-collaboration-framework/docs/archive/: README.md  数据模型设计.md
agent-collaboration-framework/docs/current/: README.md
agent-collaboration-framework/docs/module-parser/: CoC模组能力统计与ModuleContent-v1归纳.md  MODULECONTENT-README.md  edv-report.md  field-decisions-vs-alignment.md  module-content-example-validation.md  module-content-field-decisions.md  module-domain-model.md  module-field-catalog.md  p2-contract-test.md
agent-collaboration-framework/experiments/: README.md
agent-collaboration-framework/experiments/agent-orchestration-evaluation/: COMPLEXITY_REPORT.md  README.md  THREE_WAY_EVALUATION_PLAN.md
agent-collaboration-framework/experiments/langgraph-tool-agent/: README.md  pyproject.toml
agent-collaboration-framework/experiments/plain-python-tool-agent/: README.md  pyproject.toml
agent-collaboration-framework/fixtures/: clarification-turn.json  demo-cases.json  demo-module.json  demo-state.json  demo-turn.json  module-content-v1-catalog.json
agent-collaboration-framework/fixtures/capability-cases/: checkpoint-failure.json  rule-allow-after-state-change.json  rule-hook-on-scene-enter.json
agent-collaboration-framework/fixtures/invalid-modules/: checkpoint-not-listed-in-scene.json  checkpoint-scene-not-found.json  checkpoint-target-not-found.json  checkpoint-target-not-in-scene.json  duplicate-id.json  extra-field.json  (+10 more)
agent-collaboration-framework/schemas/: action-request.schema.json  action-result.schema.json  engine-request.schema.json  event.schema.json  game-state.schema.json  host-agent-context.schema.json  host-agent-event.schema.json  host-agent-usage.schema.json  intent.schema.json  module-content.schema.json  narration-output.schema.json  narration-request.schema.json  player-input.schema.json  player-view.schema.json  projection-snapshot.schema.json  summary-operation.schema.json  turn-context.schema.json  turn-output.schema.json  turn-state.schema.json  websocket-output.schema.json
agent-collaboration-framework/tests/: __init__.py  check_candidate_snapshots.py  test_architecture.py  test_engine_service.py  test_engine_store_contract.py  test_host_agent_contract.py  test_host_agent_tools.py  test_module_capabilities.py  test_module_contract.py  test_module_import_workflow.py  test_module_publish.py  test_module_runtime_load.py  test_module_validation.py  test_openai_agents_adapter.py  test_qwen_smoke.py  test_workflow.py
host-orchestrator/: README.md  pyproject.toml
host-orchestrator/tests/: __init__.py
(+326 files in other folders)
