[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "trpg-host-orchestrator"
version = "0.1.0"
description = "Framework-independent orchestration contracts and skeleton for the TRPG host agent"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.10,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/host_orchestrator"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
