[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-tool-agent"
version = "0.1.0"
description = "A business-agnostic streaming tool agent built with the LangGraph ecosystem."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain>=1.3.14,<2",
  "langchain-openai>=1.3.5,<2",
  "langgraph>=1.2.9,<2",
]

[project.scripts]
langgraph-tool-agent = "langgraph_tool_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
